Updated index.html and style.css
Added a few sections (no text yet) to get an idea of the layout
Added a button to get back to the top of the page

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <header>
         <section id="html-css">
             <ul id="html-list">
-                <li>Images</li>
-                <li>Lists</li>
+                <li><a href="#images">Images</a></li>
+                <li><a href="#lists">Lists</a></li>
                 <li>Tables</li>
                 <li>Links</li>
             </ul>
@@ -24,14 +24,27 @@
             </ul>
         </section>
     </header>
-    <hr>
+    <hr id="splitter">
     <main>
         <br id="page-top">
         <br>
         <br>
         <br>
         <br>
-        <h1 id="title">Images</h1>
+        <h1 class="title" id="images">Images</h1>
+        <section class="boxes">
+            <div class="info-box">
+                <h3>This is an info test</h3>
+            </div>
+            <div class="info-box">
+                <h3>This is an info test</h3>
+            </div>
+            <div class="info-box">
+                <h3>This is an info test</h3>
+            </div>
+        </section>
+        <hr>
+        <h1 class="title" id="lists">Lists</h1>
         <section class="boxes">
             <div class="info-box">
                 <h3>This is an info test</h3>
