--- a/index.html
+++ b/index.html
@@ -11,26 +11,21 @@
             <ul id="html-list">
                 <li><a href="#images">Images</a></li>
                 <li><a href="#lists">Lists</a></li>
-                <li>Tables</li>
-                <li>Links</li>
+                <li><a href="#tables" >Tables</a></li>
+                <li><a href="#links">Links</a></li>
             </ul>
             <h1 id="html">HTML</h1>
             <h1 id="css">CSS</h1>
             <ul id="css-list">
-                <li>Color</li>
-                <li>Position</li>
-                <li>Box-Model</li>
-                <li>Fonts</li>
+                <li><a href="#color">Color</a></li>
+                <li><a href="#position">Position</a></li>
+                <li><a href="#box-model">Box-Model</a></li>
+                <li><a href="#fonts">Fonts</a></li>
             </ul>
         </section>
     </header>
     <hr id="splitter">
     <main>
-        <br id="page-top">
-        <br>
-        <br>
-        <br>
-        <br>
         <h1 class="title" id="images">Images</h1>
         <section class="boxes">
             <div class="info-box">
@@ -56,7 +51,85 @@
                 <h3>This is an info test</h3>
             </div>
         </section>
-        <div id="scroll-up"><a href="#page-top">^</a></div>
+        <hr>
+        <h1 class="title" id="tables">Tables</h1>
+        <section class="boxes">
+            <div class="info-box">
+                <h3>This is an info test</h3>
+            </div>
+            <div class="info-box">
+                <h3>This is an info test</h3>
+            </div>
+            <div class="info-box">
+                <h3>This is an info test</h3>
+            </div>
+        </section>
+        <hr>
+        <h1 class="title" id="links">Links</h1>
+        <section class="boxes">
+            <div class="info-box">
+                <h3>This is an info test</h3>
+            </div>
+            <div class="info-box">
+                <h3>This is an info test</h3>
+            </div>
+            <div class="info-box">
+                <h3>This is an info test</h3>
+            </div>
+        </section>
+        <hr>
+        <h1 class="title" id="color">Color</h1>
+        <section class="boxes">
+            <div class="info-box">
+                <h3>This is an info test</h3>
+            </div>
+            <div class="info-box">
+                <h3>This is an info test</h3>
+            </div>
+            <div class="info-box">
+                <h3>This is an info test</h3>
+            </div>
+        </section>
+        <hr>
+        <h1 class="title" id="position">Position</h1>
+        <section class="boxes">
+            <div class="info-box">
+                <h3>This is an info test</h3>
+            </div>
+            <div class="info-box">
+                <h3>This is an info test</h3>
+            </div>
+            <div class="info-box">
+                <h3>This is an info test</h3>
+            </div>
+        </section>
+        <hr>
+        <h1 class="title" id="box-model">Box-Model</h1>
+        <section class="boxes">
+            <div class="info-box">
+                <h3>This is an info test</h3>
+            </div>
+            <div class="info-box">
+                <h3>This is an info test</h3>
+            </div>
+            <div class="info-box">
+                <h3>This is an info test</h3>
+            </div>
+        </section>
+        <hr>
+        <h1 class="title" id="fonts">Fonts</h1>
+        <section class="boxes">
+            <div class="info-box">
+                <h3>This is an info test</h3>
+            </div>
+            <div class="info-box">
+                <h3>This is an info test</h3>
+            </div>
+            <div class="info-box">
+                <h3>This is an info test</h3>
+            </div>
+        </section>
+        <div id="scroll-up"><a href="#images">^</a></div>
     </main>
 </body>
 </html>
